fix: no more overlap on search input in mobile view

--- a/src/components/SearchInput.module.scss
+++ b/src/components/SearchInput.module.scss
@@ -3,6 +3,9 @@
   align-items: center;
   width: 100%;
   position: relative;
+  @media (max-width: 760px) {
+    margin: 0.25rem 0;
+  }
 }
 
 .icon {
